spliting preview to iframe wip

--- a/design/combo.html
+++ b/design/combo.html
@@ -13,6 +13,7 @@
           <img src="../hktm/static/top_brace.png" width='90px'>
           <img src="../hktm/static/empty.png" width='90px'>
           <img src="../hktm/static/empty.png" width='90px'>
+          <img src="../hktm/static/empty.png" width='90px'>
           <img src="../hktm/static/btm_brace.png" width='90px'>
         </div>
         <div class="furigana-combo">
